Resized image to look correct on iPhone.

--- a/_sass/customize_theme.scss
+++ b/_sass/customize_theme.scss
@@ -91,7 +91,7 @@ a.navbar-brand {
 @media (max-width: 420px) {
 
     a.navbar-brand {
-        min-width: 300px;
+        min-width: 250px;
     }
 
 }
